# VirtualMicDriver

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.bat  build_user_app.bat  install.bat  main.c  reconfigure_and_build.bat  uninstall.bat  user_app.c  virtual_mic.inf
.github/workflows/: ci.yml
include/: audio_processing.h  common.h  driver_core.h  ioctl_handlers.h  virtual_mic.h
mock/: ntddk.h  ntstrsafe.h  wdf.h
scripts/: build.ps1  setup_build_env.ps1  test.ps1
src/: main.c
src/audio/: audio_processing.c
src/common/: common.c
src/driver/: driver_core.c
src/ioctl/: ioctl_handlers.c
tests/: CMakeLists.txt  test_audio_processing.c  test_ioctl_handlers.c
